# rzeta

./: .gitignore  DESCRIPTION  NAMESPACE  README.md  clean.sh  configure.ac  install.src
R/: DZeta.R  QZeta.R
man/: DZeta.Rd  QZeta.Rd
src/: Makevars  Makevars.example  dzeta_function.c  dzeta_function.h  dzeta_function_R_interface.c  init_zeta_function.c  init_zeta_function.h  qzeta_function.c  qzeta_function.h  qzeta_function_R_interface.c
